[package]
name = "sync_clipboard"
version = "0.3.0"
authors = ["Tice Cosmos <tice@139.com>"]
edition = "2018"
description = "check and update theia plugins"
license = "MIT"
readme = "README.md"

[dependencies]
async-std = { version = "1.8", features = ["attributes", "unstable"] }
chrono = "0.4"
copypasta = "0.7"
env_logger = "0.8"
structopt = "0.3"
webbrowser = "0.5"

futures-lite = "*"
log = "*"
